Make dark mode modal a bit less dark, fixes #1530

--- a/app/bibleview-js/src/common.scss
+++ b/app/bibleview-js/src/common.scss
@@ -155,7 +155,7 @@ $modal-header-background-color: rgba(172,172,172,1);
 $night-modal-header-background-color: rgba(69,69,69,1);
 
 $modal-content-background-color: #fefefe;
-$modal-content-background-color-night: black;
+$modal-content-background-color-night: rgb(33, 33, 33);
 
 .highlight-transition {
   transition: background-color 0.5s ease;
